keycloak/src/http-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gateway
spec:
  gatewayClassName: ngrok
  listeners:
  - name: http-listener
    port: 80
    protocol: HTTP
    hostname: keycloak.ryanguild.xyz
  routes:
  - match: /
    action:
      forwardTo:
      - serviceName: keycloak
        port: 80
