keycloak/src/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-tls
  namespace: xyz
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`keycloak.ryanguild.local`)
      kind: Rule
      services:
        - name: keycloak
          port: 80
  tls:
    secretName: keycloak-tls
