keycloak/src/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-http-route
  namespace: keycloak
spec:
  hostnames:
    - keycloak.ryanguild.xyz
  parentRefs:
    - name: ngrok-gateway
      namespace: ngrok
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
