keycloak/src/keycloak-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: xyz
spec:
  parentRefs:
  - name: main
    namespace: traefik
  hostnames:
  - "keycloak.ryanguild.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak
      port: 80
      weight: 1
